--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -297,7 +297,7 @@ Each object in the sample had its own transfer function parameters. The upper
 limit $b$ of the transfer function was simulated using a log-normal distribution
 with a median value of 10 days, and the standard deviation of $\ln(b)$ was
 0.3. Given $b$, $a$ was simulated from a uniform distribution between $0$ and
-$a$. The resulting distribution of lags $\bar{\tau} = (a+b)/2$ is very well
+$b$. The resulting distribution of lags $\bar{\tau} = (a+b)/2$ is very well
 approximated by a lognormal distribution with a median of 7.4 days and width
 (quantified by the standard deviation of $\log_{10}(\bar{\tau})$) of 0.157
 (these two quantities are the ones we will infer using the hierarchical model).
