More little edits

--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -305,14 +305,13 @@ The response amplitudes $A$ and $C$ were set to 0.5 and 0 respectively, for
 all objects.
 
 The measured data for each of the 100 AGN was
-continuum flux measurements, once per day, for 100 days. The continuum fluxes
-for each object oscillate around a mean value of 50 in arbitrary units, and the
-standard deviation of the measurement noise is 1 (i.e. 2\%). The line data is measured on
+continuum flux measurements, once per day, for 100 days. The standard deviation
+of the measurement noise is 1 flux unit (i.e. 2\%). The line data is measured on
 only two days, with times selected from a uniform distribution between $t=50$
 and $t=100$ days (i.e. corresponding to the latter half of the continuum data).
 The flux of the line data is typically about half that of the continuum data
 (since $A=0.5$ for all objects), and the
-measurement noise for the line data is 0.25, or about 1\%.
+measurement noise for the line data is 0.25 flux units, or about 1\%.
 See Figure~\ref{fig:data} for three illustrative data sets from the sample.
 
 \begin{figure}
