--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -124,6 +124,7 @@ $\tau$ using RM data for a single AGN. We then demonstrate the technique
 on simulated data in Section~\ref{sec:data}, and conclude in
 Section~\ref{sec:conclusions}.
 
+\vspace{-0.5cm}
 \section{Combining Inferences About Multiple Objects}\label{sec:multiple}
 Consider a sample of $N$ objects, each of which has parameters $\theta_i$.
 If the $i$th object is analysed on its own, the inference about 
@@ -244,16 +245,16 @@ time using ten time bins per day, and have a discrete continuum light curve
 $\mathbf{y} = \{y_1, ..., y_n\}$, included in the model as a set of unknown
 parameters. The prior for these parameters is:
 \begin{eqnarray}
-p(y_i | y_{i-1},  m, a, \beta) \sim \mathcal{N}
-\left(m + a\left(y_{i-1} - m\right), \beta^2\right)
+p(y_i | y_{i-1},  m, k, \beta) \sim \mathcal{N}
+\left(m + k\left(y_{i-1} - m\right), \beta^2\right)
 \end{eqnarray}
 for $i \geq 2$. This is the discrete AR(1) model from time series theory.
 $m$ describes the mean level of the continuum light curve, $\beta$ controls
-the size of the short-term fluctuations, and $a$ controls the correlation
-timescale (the timescale is given by $L = -1/\ln(a)$).
+the size of the short-term fluctuations, and $k$ controls the correlation
+timescale (the timescale itself is given by $L = -1/\ln(k)$).
 
 For the likelihood (or sampling distribution, really the prior for the data
-given the parameters) we made the conventional gaussian assumption:
+given the parameters) we made the conventional assumption of ``Gaussian noise'':
 \begin{eqnarray}
 Y_i &\sim& \mathcal{N}\left(y(t_{y_i}), \sigma_{y_i}^2\right)\\
 L_i &\sim& \mathcal{N}\left(l(t_{l_i}), \sigma_{l_i}^2\right)
@@ -281,6 +282,7 @@ Note that our single-object model is already an improvement over standard
 cross-correlation techniques and is similar to the approach used by
 \citet{2011ApJ...735...80Z}.
 
+\vspace{-0.5cm}
 \section{Demonstration on Simulated Data}\label{sec:data}
 To test our hierarchical model, and compare it to the stacked cross-correlation
 function, we simulated data from a sample of 100 AGN. We assumed the
@@ -302,7 +304,8 @@ approximated by a lognormal distribution with a median of 7.4 days and width
 (quantified by the standard deviation of $\log_{10}(\bar{\tau})$) of 0.157
 (these two quantities are the ones we will infer using the hierarchical model).
 The response amplitudes $A$ and $C$ were set to 0.5 and 0 respectively, for
-all objects.
+all objects. Note that the distribution of the parameters of the 100 objects is
+not the same as the priors used when analysing them with the single-object model.
 
 The measured data for each of the 100 AGN was
 continuum flux measurements, once per day, for 100 days. The standard deviation
@@ -400,7 +403,8 @@ about hyperparameters $\mu$ and $\sigma$ describing the central value and
 the diversity of $\bar{\tau}$ respectively, using the result of
 Equation~\ref{eq:individual}. This requires us to know the prior $\pi(\bar{\tau})$
 implied by the simple-object model, since we did not assign the prior directly
-to $\bar{\tau}$. The prior for $\bar{\tau}$ in the single-object model is
+to $\bar{\tau}$ but indirectly through $a$ and $b$.
+The prior for $\bar{\tau}$ in the single-object model is
 very well approximated by a log-uniform distribution.
 
 Since lags $\bar{\tau}$ are positive, 
@@ -460,6 +464,7 @@ amplitudes $A$ were equal to 0.5, we may be able to make more accurate
 inferences. However, this would increase the complexity of the method and the
 computational expense.
 
+\vspace{-0.5cm}
 \section{Conclusions}\label{sec:conclusions}
 Reverberation mapping campaigns are observationally intensive, yet potentially
 very informative. This has led to
@@ -483,6 +488,7 @@ function had a FWHM of $\sim$ 0.25 dex. This is possible because a subset of
 the objects in the sample will have a measureable lag. We hope this approach
 will facilitate informative studies of samples of AGN.
 
+\vspace{-0.5cm}
 \section*{Acknowledgements}
 It is a pleasure to thank Tommaso Treu, Anna Pancoast (UCSB), and
 Brandon Kelly (UCSB) for many
